[package]
name = "rsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "std"]
integer128 = []
std = ["serde/std"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.159", optional = true }
unicode-ident = "1.0.8"

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
