[package]
name = "rsn"
description = "A Rust-inspired, human-readable object notation."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/rsn"
readme = "./README.md"
rust-version = "1.65"
categories = ["no-std", "parser-implementations", "encoding"]
keywords = ["serde", "parser", "serialization"]

[features]
default = ["serde", "std"]
integer128 = []
std = ["serde/std"]
serde = ["dep:serde"]
nightly = []               # Enables unstable documentation features outside of docs.rs

[dependencies]
serde = { version = "1.0.159", optional = true, default-features = false, features = [
    "alloc",
] }
unicode-ident = "1.0.8"

[[example]]
name = "basic"
required-features = ["serde"]

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_bytes = { version = "0.11.9" }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["std,serde"]

[workspace]
members = ["xtask"]
